# iksar-buddy

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  FORGE.md  FORGE_CALIBRATION.md  GUEST_RUNBOOK.md  HARVEST.md  OPEN_TASKS.md  PROJECT.md  README.md  STRETCH_GOALS.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  capture.py  chat_guard.py  client.py  guest_sense.py  host_agent.py  host_sensor.py  inject.py  launcher.py  ocr.py
brain/: __init__.py  __main__.py  charswitch.py  config.py  policy.py  server.py  sim.py  state.py  telemetry.py
brain/web/: __init__.py  app.py
claude_findings/: FINDINGS.md
config/: README.md  ability_map.yaml  active_profile  calibration.yaml  characters.yaml  harvest.yaml  thresholds.yaml
config/forge/: accounts.example.yaml  class_chars.yaml  craft.yaml  crafters.yaml  keymap.yaml  lists.yaml  stations.yaml
config/profiles/: asmoden.yaml  croalst.yaml  croolst.yaml  furyflatulence.yaml  jenskin.yaml  joar.yaml
forge/: __init__.py  __main__.py  controller.py  debug.py  guest.py  login.py  recipes.py  sensors.py  sim.py  telemetry.py  worker.py
forge/web/: app.py
guest_agent/: __init__.py  agent.example.json  agentio.py  capture_test.py  craft_reflex.py  diag.py  eq2mem.py  harvest_agent.py  harvest_loops.py  heal.example.json  heal.json  heal_reflex.py  heal_ruleset.py  hud_overlay.py  ib_agent.py  nav.py  offsets.py  win_input.py
harvest/: __init__.py  __main__.py  find_accessors.py  memory_read.py  nav_graph.py  ogre_import.py  record_graph.py  sense_daemon.py  sense_push.py  spawns_live.py
response/: stretch-goal-intel-gathering-response.md
sessions/: SESSION_TEMPLATE.md  session-2026-06-11.md  session-2026-06-12.md  session-2026-06-13.md  session-2026-06-14.md  session-2026-06-15.md  session-2026-06-16.md  session-2026-06-17.md  session-2026-06-19.md  session-2026-06-21.md  session-2026-06-22.md  session-2026-06-23.md  session-2026-06-24.md  session-2026-06-30-dirge-login-ui.md  session-2026-06-30-dirge.md  session-2026-06-30.md  session-2026-07-01.md  session-2026-07-06.md  session-2026-07-07.md  session-2026-07-10.md  session-2026-07-12.md  session-2026-07-22.md
shared/: __init__.py  account_lock.py  guest.py  login.py  protocol.py  push.py  push.yaml.example  tunables.py
tests/: test_account_lock.py  test_charswitch.py  test_chat_guard.py  test_dirge_heal.py  test_forge.py  test_guest_sense.py  test_heal_ruleset.py  test_host_agent.py  test_host_sensor.py  test_policy.py  test_protocol.py
web_common/: __init__.py
(+141 files in other folders)
