[project]
name = "iksar_buddy"
version = "0.1.0"
description = "ib — healer automation companion (sense / decide / act)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "setproctitle>=1.3",
]

# Agent-only extras (Windows sensor/inject stack). Install on the guest with:
#   pip install -e .[agent]
[project.optional-dependencies]
agent = [
    "mss>=9.0",        # pixel capture (fallback / cross-platform)
    "pytesseract>=0.3",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
# Opsec (§7.5): runtime-visible entrypoints are 'ib', never eq2/bot.
ib = "brain.__main__:main"
ib-agent = "agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared", "brain", "brain.web", "agent",
            "forge", "forge.web", "harvest", "guest_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
